Fix check failure when adding a printer.

The printing WebUI handler is looking for a parameter which has been
removed.  Fix it so we can add printers again.

Bug: 757589
Change-Id: Id25d21474f052a911e86384847e37b1f6d9c4c0f
Reviewed-on: https://chromium-review.googlesource.com/624731
Reviewed-by: Tommy Li <tommycli@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496334}
Former-commit-id: 916f88c9ac3eed4569aa473dce1b10982a83efe1